--- a/style.css
+++ b/style.css
@@ -5,18 +5,24 @@ body {
     background-color: #101110;
     color: #FEFEFF;
     font-family: Arial, Helvetica, sans-serif;
+    scroll-behavior: smooth;
 
 }
 
 body::-webkit-scrollbar {
     width: 0;
+}
+
+html {
     scroll-behavior: smooth;
 }
 
 #main2 {
     overflow: hidden;
 }
-
+/* #main{
+    overflow: hidden;
+} */
 
 
 .text {
@@ -30,7 +36,7 @@ body::-webkit-scrollbar {
     line-height: 1;
 }
 
-#main2 {
+.main2 {
     background-image: url("assests/background.png");
 }
 
@@ -179,6 +185,15 @@ body::-webkit-scrollbar {
 }
 
 .mySlides {
+    display: none;
+}
+
+.buttonbg {
+    background: rgb(88, 228, 109);
+    background: linear-gradient(87deg, rgba(88, 228, 109, 1) 0%, rgba(11, 84, 34, 1) 100%);
+}
+
+#check{
     display: none;
 }
 
