--- a/style.css
+++ b/style.css
@@ -9,9 +9,9 @@ body {
 
 }
 
-body::-webkit-scrollbar {
+/* body::-webkit-scrollbar {
     width: 0;
-}
+} */
 
 html {
     scroll-behavior: smooth;
